fix: map not showing (`mapConvas` -> `mapCanvas`)

--- a/style/scss/src/_ui.scss
+++ b/style/scss/src/_ui.scss
@@ -1,6 +1,6 @@
 /// <reference path="./_variables.scss" />
 
-#mapConvas {
+#mapCanvas {
     height: calc(100vh - 74px); // 74px = Navbar height
     background-color: rgba(#0fa8d2, 1);
 }
