--- a/style/src/style.css
+++ b/style/src/style.css
@@ -3893,13 +3893,13 @@ textarea.form-control-lg {
   width: 1em;
   height: 1em;
   padding: 0.25em 0.25em;
-  color: #fff;
-  background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat;
+  color: #000;
+  background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat;
   border: 0;
   border-radius: 0.25rem;
   opacity: 0.4; }
   .btn-close:hover {
-    color: #fff;
+    color: #000;
     text-decoration: none;
     opacity: 1; }
   .btn-close:focus {
@@ -7520,7 +7520,7 @@ textarea.form-control-lg {
     pointer-events: auto; }
 
 .notify {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   padding: 0.75rem;
   border-radius: 6px;
   display: flex;
@@ -7634,8 +7634,10 @@ textarea.form-control-lg {
   .notify-is-left .notify--slideIn {
     opacity: 1;
     transform: translateX(0); }
+  .notify .notify-content {
+    padding-top: 0.4em; }
 
-#mapConvas {
+#mapCanvas {
   height: calc(100vh - 74px);
   background-color: #0fa8d2; }
 
@@ -7658,3 +7660,40 @@ div#blipControlContainer a.blip-button-a {
   div#blipControlContainer a.blip-button-a.blip-disabled {
     background-color: rgba(214, 44, 26, 0.67);
     padding: 0.3rem 1.1em; }
+
+.clear {
+  clear: both; }
+
+.info-window {
+  padding: 10px;
+  background-color: #222; }
+  .info-window .info-header-box {
+    margin-bottom: 2px; }
+  .info-window .info-header {
+    float: left;
+    font-size: 1.8em !important;
+    font-weight: bold !important;
+    padding-top: 3px; }
+  .info-window .info-body {
+    height: 33px;
+    border-top: 1px solid #adb5bd; }
+  .info-window .info-body-row strong {
+    width: auto; }
+  .info-window .info-body-row {
+    padding: 2px 0; }
+
+.leaflet-popup-content-wrapper,
+.leaflet-popup-tip {
+  background-color: #222 !important;
+  color: #fff !important; }
+
+.leaflet-control-layers {
+  background-color: #222 !important;
+  color: #fff !important; }
+
+.leaflet-bar a.leaflet-disabled {
+  color: #adb5bd !important; }
+
+.leaflet-bar a {
+  background-color: #222 !important;
+  color: #fd7e14 !important; }
